--- a/public/css/user_default/margarita.css
+++ b/public/css/user_default/margarita.css
@@ -201,11 +201,27 @@ a:link {
 	margin: 10px 0;
 }
 
-.widget input.text, .widget .textarea {
+.widget input.text, .widget .textarea, .form_block input.text, .form_block .textarea {
 	padding: 10px;
 	width: 90%;
 	border: 1px solid #eee;
+}
 
+select {
+	padding: 10px;
+	width: 93%;
+	border: 1px solid #eee;
+}
+
+.label_info{
+	margin-left: 15px;
+	font-size: 12px;
+	color: #bcbcbc;
+	font-weight: normal;
+}
+
+.acc_input {
+	padding-bottom: 10px;
 }
 
 .auth_body h1 {
