--- a/templates/mail/lostpassword.html.tt
+++ b/templates/mail/lostpassword.html.tt
@@ -1,15 +1,15 @@
 [% IF SUBJECT %]Восстановление пароля[% ELSIF TEXT %]
-<div style="width:600px;background:url(http://www.analizmarket.ru/img/mail-stripes.png);padding:10px;">
+<div style="width:600px;background:url(http://www.image-make.ru/img/mail-stripes.png);padding:10px;">
 <div style="padding:20px;background:#f5f5f5;font-family:tahoma,sans-serif;">
-<img src="http://www.analizmarket.ru/img/logo-png.png">
+<img src="http://www.image-make.ru/img/logo-png.png">
 <div style="padding:20px 0px; border-bottom:1px solid #ccc;">
-<h1>Восстановление пароля на сайте analizmarket.ru</h1>
-Что бы восстановить пароль нужно пройти по <a href="http://www.analizmarket.ru/auth/activationlink/[% activationid %]?email=[% email %]">ссылке</a>
+<h1>Восстановление пароля на сайте image-make.ru</h1>
+Что бы восстановить пароль нужно пройти по <a href="http://www.image-make.ru/auth/activationlink/[% activationid %]?email=[% email %]">ссылке</a>
 </div>
 <div style="font-size:12px;color:#666;padding-top:20px;">
 Если вы не делали запроса для получения пароля, то просто удалите данное письмо, ваш пароль храниться в надежном месте, и недоступен посторонним лицам.
 <br/><br/>
-С наилучшими пожеланиями, администрация сайта analizmarket.ru.
+С наилучшими пожеланиями, администрация сайта image-make.ru.
 </div>
 </div>
 </div>
