--- a/public/css/user_default/margarita.css
+++ b/public/css/user_default/margarita.css
@@ -1,6 +1,7 @@
 body {
 	color: #535353;
 	font-family: "Open Sans","Tahoma","Verdana","Arial", sans-serif;
+	font-size: 14px;
 }
 
 img {
@@ -15,6 +16,15 @@ h3 {
 
 a:link {
 	text-decoration: none;
+	color: #464646;
+}
+
+a:visited {
+	color: #464646;
+} 
+
+a:hover{
+	color: #359BED;
 }
 
 #container {
@@ -24,7 +34,7 @@ a:link {
 }
 
 #header {
-	margin: 30px 0;
+	margin: 5px 0 30px 0;
 	position: relative;
 }
 
@@ -176,7 +186,8 @@ a:link {
 #main {
 	margin-bottom: 20px;
 	padding-bottom: 20px;
-	width: 700px;
+	margin-right: 30px;
+	width: 670px;
 	float: left;
 	overflow: hidden;
 }
@@ -294,4 +305,10 @@ select {
 
 .clearpos {
 	clear: both;
+}
+
+.orphus {
+	float: right;
+	margin-top: -14px;
+	padding-right: 20px;
 }
