--- a/templates/layouts/user_default.html.tt
+++ b/templates/layouts/user_default.html.tt
@@ -6,17 +6,31 @@
 		<meta name="description" content="[% h.layout_var( 'meta_desc' ) %]">
 		[% IF h.exist_layout_var( 'keys' ) %]<meta name="keywords" content="[% h.layout_var( 'keys' ) %]" />[% END %]
 		<meta property="og:title" content="[% h.config_site.name %]"/>
-		<meta property="og:image" content="[% c.tx.req.url.base.scheme _ "://" _ c.tx.req.url.base.host %]/img/logo.gif"/>
+[% IF 0 %]		<meta property="og:image" content="[% c.tx.req.url.base.scheme _ "://" _ c.tx.req.url.base.host %]/img/logo.gif"/> [% END %]
+		[% IF h.exist_layout_var( 'meta_tags' ) %]
+			[% FOREACH tag = h.layout_var( 'meta_tags' ) %]
+				<meta property="[% tag.property %]" content="[% tag.content%]" />
+			[% END %]
+		[% END %]
 		<meta property="og:site_name" content="[% h.config_site.name %]"/>
 		<meta property="og:description" content="На сайте «[% h.config_site.name %]» [% h.config_site.description %]"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 		[% IF h.config_site.vk_username %]
-		<script src="http://vkontakte.ru/js/api/openapi.js" type="text/javascript"></script>
+		<script src="http://vk.com/js/api/openapi.js" type="text/javascript"></script>
+		[% END %]
+		[% IF h.exist_layout_var( 'css' ) %]
+			[% FOREACH css = h.layout_var( 'css' ) %]
+				<link rel="stylesheet" type="text/css" media="all" href="/css/plugins/user_default/[% css %]?[% h.mtime_static.css %]" />
+			[% END %]
+		[% END %]
+		[% IF h.exist_layout_var( 'js' ) %]
+			[% FOREACH js = h.layout_var( 'js' ) %]
+				<script src="/js/plugins/user_default/[% js %]?[% h.mtime_static.js %]" type="text/javascript"></script>
+			[% END %]
 		[% END %]
 		<link rel="stylesheet" type="text/css" media="all" href="/css/user_default/margarita.css?[% h.mtime_static.css %]" />
 		<link type="image/x-icon" rel="shortcut icon" href="/favicon.ico" />
-		<script src="/js/user_default/jq.common.js?[% h.mtime_static.js %]" type="text/javascript"></script>
 		[% IF h.config_site.addthis_id %]
 			<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js"></script>
 		[% END %]
@@ -28,12 +42,26 @@
 		<script>
 			$(document).ready( function(){
 			[% IF h.config_site.vk_username %]
-				VK.init({ apiId: 3666702 });
-				VK.Api.call('groups.getById',{gid: '[% h.config_site.vk_username %]', fields: "members_count"}, function(data) {if (data.response) {document.getElementById('gr_members_vk').innerHTML = data.response[0].members_count}});
+				VK.init({ apiId: [% h.config_site.vk_apiId %]});
+				VK.Api.call(
+					'groups.getById',
+					{
+						gids: '[% h.config_site.vk_username %]', 
+						fields: "members_count"
+					}, 
+					function(data) {
+						if (data.response) {
+							document.getElementById('gr_members_vk').innerHTML = data.response[0].members_count
+						}
+						else {
+							console.log( data );
+						}
+					}
+				);
 			[% END %]
 			[% IF h.config_site.addthis_id %]
 				var addthis_config = {
-				     pubid: [% h.config_site.addthis_id %]
+				     pubid: '[% h.config_site.addthis_id %]'
 					 };
 			[% END %]
 			});
@@ -47,7 +75,7 @@
 						<ul>
 							[% IF h.config_site.twitter_username %][% tw = h.get_twitter_data %]<li><a href="https://twitter.com/[% tw.screen_name %]"><img src="/img/user_default/twitter.png" /></a></li>[% END %]
 							[% IF h.config_site.facebook_username %][% fb = h.get_facebook_data %]<li><a target="facebook" href="[% fb.link %]"><img src="/img/user_default/facebook.png" /></a></li>[% END %]
-							[% IF h.config_site.vk_username %]<li><a target="vk" href="http://vk.com/club[% h.config_site.vk_username %]"><img src="/img/user_default/vk.png" /></a></li>[% END %]
+							[% IF h.config_site.vk_username %]<li><a target="vk" href="http://vk.com/[% h.config_site.vk_username %]"><img src="/img/user_default/vk.png" /></a></li>[% END %]
 							[% IF h.config_site.gplus_enabled %]<li><a href="[% h.config_site.gplus_link %]"><img src="/img/user_default/gplus.png" /></a></li>[% END %]
 						</ul>
 					</div>
@@ -91,9 +119,9 @@
 					<div class="vk">
 						<div class="icon"><img src="/img/user_default/vk32_1.png" /></div>
 						<div class="cont">
-							<a target="_blank" href="http://vk.com/club[% h.config_site.vk_username %]" id="gr_members_vk">...</a>
+							<a target="_blank" href="http://vk.com/[% h.config_site.vk_username %]" id="gr_members_vk">...</a>
 						</div>
-						<div class="text">Участников</div>
+						<div class="text">Friends</div>
 					</div>
 					[% END %]
 					[% IF h.config_site.gplus_username %]
@@ -171,60 +199,3 @@
 		</div>
 	</body>
 </html>
-
-[% IF 0 %]
-
-[% IF h.config_site.facebook_username %]
-	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-		var js, fjs = d.getElementsByTagName(s)[0];
-		if (d.getElementById(id)) return;
-		js = d.createElement(s); js.id = id;
-		js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1";
-		fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
-[% END %]
-[% IF h.config_site.vk_enabled %]
-	<script type="text/javascript" src="//vk.com/js/api/openapi.js?69"></script>
-	<script type="text/javascript">VK.init({apiId: [% h.config_site.vk_apiId %], onlyWidgets: true});</script>
-[% END %]
-	[% PROCESS layers %]
-	<div id="main">
-		<div class="lens">
-			<div class="inner">
-				<!-- Логин -->
-				[% PROCESS top_login %]
-					<div class="content">
-					[% IF h.config_site.sharethis_enabled %]
-						<div class="sharer">
-							<!-- AddThis Button BEGIN -->
-							<div class="addthis_toolbox addthis_floating_style addthis_16x16_style" 
-								addthis:title="[% h.config_site.name %]"
-								addthis:description="На сайте «[% h.config_site.name %]» [% h.config_site.description %]">
-								<a rel="nofollow" class="addthis_button_vk"></a>
-								<a rel="nofollow" class="addthis_button_facebook"></a>
-								<a rel="nofollow" class="addthis_button_twitter"></a>
-								<a rel="nofollow" class="addthis_button_odnoklassniki_ru"></a>
-								<a class="addthis_button_compact"></a>
-							</div>
-							<!-- AddThis Button END -->
-						</div>
-					[% END %]
-						<div class="logo_and_menu">
-							<a href="/"><img src="/img/logo.gif" class="logo_img" alt="[% h.config_site.name %]" /></a>
-							[% PROCESS menu %]
-						</div>
-						[% PROCESS show_errors %]
-						<div class="near_labs">[%# PROCESS labs_adress %][%# PROCESS basket %]</div>
-						[% h.content %]
-						<div class="clear"></div>
-					</div>
-				</div>
-			[% PROCESS footer %]
-			</div>
-		</div>
-	</div>
-	[% IF h.config_site.sharethis_enabled %]
-	<script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=[% h.config_site.sharethis_pubid %]"></script>
-	[% END %]
-[% END #IF0 %]
