--- a/templates/main/welcome.html.tt
+++ b/templates/main/welcome.html.tt
@@ -1,6 +1,6 @@
 [% h.layout_var( 'meta_title', 'Главная' ) %]
 [% h.layout_var( 'meta_desc', 'На сайте Image-make.ru вы сможете найти любую информацию о создании стиля.') %]
 <div class="main_vitr">
-[% PROCESS 'article/.blocks/main_slider' %]
+[%# PROCESS 'article/.blocks/main_slider' %]
 </div>
 <div class="clear"></div>
