--- a/templates/layouts/user_default.html.tt
+++ b/templates/layouts/user_default.html.tt
@@ -1,4 +1,5 @@
-[% PROCESS ".blocks/user_default/layouts" %]
+[% PROCESS ".blocks/layouts" %]
+[% h.layout_var('layout_path', 'user_default') %] 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
