--- a/templates/layouts/admin.html.tt
+++ b/templates/layouts/admin.html.tt
@@ -4,11 +4,15 @@
       <head>
 	<title>Админка</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
 	<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="/bootstrap/css/bootstrap-fileupload.min.css" rel="stylesheet" media="screen">
 	<script src="/bootstrap/js/bootstrap.min.js"></script>
 	<script src="/bootstrap/js/bootstrap-fileupload.min.js"></script>
+	<script src="/js/jquery.ui.widget.js"></script>
+	<script src="/js/jquery.iframe-transport.js"></script>
+	<script src="/js/jquery.fileupload.js"></script>
+	<link rel="stylesheet" href="/css/jquery.fileupload.css">
       </head>
 	  <body>
 
