--- a/templates/mail/register.html.tt
+++ b/templates/mail/register.html.tt
@@ -1,18 +1,18 @@
-[% IF SUBJECT %]Регистрация на сайте Image-make.ru[% ELSIF TEXT %]
-<div style="width:600px;background:url(http://www.image-make.ru/img/mail-stripes.png);padding:10px;">
+[% IF SUBJECT %]Регистрация на сайте маруся-стайл.рф[% ELSIF TEXT %]
+<div style="width:600px;background:url(http://www.маруся-стайл.рф/img/mail-stripes.png);padding:10px;">
 <div style="padding:20px;background:#f5f5f5;font-family:tahoma,sans-serif;">
-<a href="http://image-make.ru/"><img src="http://www.image-make.ru/img/logo-png.png" style="border:0px;"></a>
+<a href="http://маруся-стайл.рф/"><img src="http://www.маруся-стайл.рф/img/logo-png.png" style="border:0px;"></a>
 <div style="padding:20px 0px; border-bottom:1px solid #ccc;">
-<h1 style="font-size:28px;">Регистрация на сайте image-make.ru</h1>
+<h1 style="font-size:28px;">Регистрация на сайте маруся-стайл.рф</h1>
 Здравствуйте!<br/><br/>
-Благодарим вас за регистрацию на "ImageMAKE". Теперь вы можете создать на сайте <a href="http://image-make.ru">image-make.ru</a> личный аккаунт.<br/><br/>
-Чтобы подтвердить регистрацию, пройдите по ссылке: <a href="http://www.image-make.ru/auth/activationlink/[% activationid %]?email=[% email %]&back_url=%2F">ссылке</a>.<br/><br/>
+Благодарим вас за регистрацию на "ImageMAKE". Теперь вы можете создать на сайте <a href="http://маруся-стайл.рф">маруся-стайл.рф</a> личный аккаунт.<br/><br/>
+Чтобы подтвердить регистрацию, пройдите по ссылке: <a href="http://www.маруся-стайл.рф/auth/activationlink/[% activationid %]?email=[% email %]&back_url=%2F">ссылке</a>.<br/><br/>
 Если вы не хотите создавать аккаунт, проигнорируйте это письмо.
 </div>
 <div style="font-size:12px;color:#666;padding-top:20px;">
 С уважением,<br/>
 «ImageMAKE»<br/>
-<a href="mailto:info@image-make.ru">info@image-make.ru</a><br/>
+<a href="mailto:info@маруся-стайл.рф">info@маруся-стайл.рф</a><br/>
 </div>
 </div>
 </div>
